--- a/Cmakelists.txt
+++ b/Cmakelists.txt
@@ -27,10 +27,10 @@ elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
 endif()
 
 #path
-SET(EIGEN_PATH "D:/myapp/Eigen/eigen-3.4.0")
-SET(IGL_PATH "D:/myapp/libigl/libigl/include")
-SET(OPENMESH_PATH "D:/myapp/openmesh/OpenMesh-10.0.0/src")
-SET(OPENMESH_LIB_PATH "D:/myapp/openmesh/OpenMesh-10.0.0/install/lib")
+SET(EIGEN_PATH "D:/CodeLib/Eigen/eigen-3.4.0")
+SET(IGL_PATH "D:/Homework/DGP/GeodesicPaths/3rd_party/libigl/libigl/include")
+SET(OPENMESH_PATH "D:/CodeLib/Openmesh/OpenMesh-11.0.0/src")
+SET(OPENMESH_LIB_PATH "D:/CodeLib/Openmesh/OpenMesh-11.0.0/install/lib")
 
 #QT
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -77,6 +77,7 @@ file (GLOB MeshViewer_FILE
     src/MeshViewer/QGLViewerWidget.*
     src/MeshViewer/QEMSimplification.*
     src/MeshViewer/SpectralQEM.*
+    src/MeshViewer/MeshPropertyMatrix.*
 )
 
 add_executable(${PROJECT_NAME} ${SRCFILES} 
